<resources>
    <string name="app_name">KSafe</string>

    <string name="coming_soon">Coming soon</string>
    <string name="add_new">Add New</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="add_password">Add Password</string>
    <string name="generate_new">Generate New</string>
    <string name="length">Length</string>
    <string name="include_uppercase">Include Uppercase</string>
    <string name="include_symbol">Include Symbol</string>
    <string name="randomize">Randomize</string>
    <string name="copy">Copy</string>
    <string name="create_a_new_record">Create a new record</string>
    <string name="search">Search…</string>
    <string name="no_results">No results</string>
    <string name="data_not_found">We can\'t find any password</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_error">Update Error</string>
    <string name="save_changes">Save Changes</string>
    <string name="generate">Generate</string>
    <string name="analysis">Analysis</string>
    <string name="home">Home</string>
    <string name="error_message_try_again_later">Try Again Later</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="msg_password_deleted_successfully">Password deleted successfully</string>
    <string name="msg_error_to_delete_password">An error occurred while deleting the password</string>
    <string name="undo">Undo</string>
    <string name="msg_name_field_empty_error">Name field cannot be empty</string>
    <string name="msg_password_field_empty_error">Password field cannot be empty</string>
    <string name="msg_password_created_successfully">Password created successfully</string>
    <string name="msg_password_update_successfully">Password updated successfully</string>
    <string name="unknown_error">Unknown Error</string>

</resources>