<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.generate_password_screen.GeneratePasswordFragment">

    <TextView
        android:id="@+id/tvGenerateError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@+id/tv_generateNew"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimaryContainer" />

    <TextView
        android:id="@+id/tv_generateNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/generate_new"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="64sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <TextView
        android:id="@+id/tv_passwordGenerated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_textview_rounded"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_generateNew" />

    <TextView
        android:id="@+id/tv_nameHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/length"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/slider_passwordLength"
        app:layout_constraintTop_toBottomOf="@+id/tv_passwordGenerated" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_passwordLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:stepSize="1"
        android:value="25.0"
        android:valueFrom="10.0"
        android:valueTo="40.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameHint"
        app:tickVisible="false" />

    <LinearLayout
        android:id="@+id/ll_switchButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/slider_passwordLength"
        app:layout_constraintTop_toBottomOf="@+id/slider_passwordLength">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_uppercase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/include_uppercase"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="12sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_symbol"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/include_symbol"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_switchButtons">

        <Button
            android:id="@+id/btn_randomize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background_secondary"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/randomize"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:backgroundTint="?attr/colorOnPrimary"
            app:backgroundTintMode="multiply" />

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/copy"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>